			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

21-Mar-2002
~~~~~~~~~~~
Filenames which are not valid UTF-8 are shown in red. A tooltip explains the
problem. CHARSET is used to try and render the name anyway, and the rename
box can be used to fix it (reported by Christopher Arndt).

20-Mar-2002
~~~~~~~~~~~
Times weren't converted to UTF-8, causing errors in some locales (reported
by Christopher Arndt and tracked down by Andras Mohari).
Informational messages are now shown with the info icon, not the error symbol
(suggested by Andras Mohari).

18-Mar-2002
~~~~~~~~~~~
Set _WIN_HINTS for pinboard and panel icons so that they don't appear on
task-lists or get selected when Alt-Tabbing (Brendan McCarthy).
Allow COMPOUND_TEXT target for pinboard and panels (allows pasting into
gnome-terminal).
The Path Entry minibuffer now highlights invalid paths in red, instead of
beeping.

17-Mar-2002
~~~~~~~~~~~
Internal changes: MaskedPixmap, Directory and XMLwrapper types are now
GObjects. FSCache now works on GObjects, and the interface is therefore
simpler now.

16-Mar-2002
~~~~~~~~~~~
Sorted out some focussing and defaulting behaviour in action windows.

14-Mar-2002
~~~~~~~~~~~
Split action window code, so that most of the GUI stuff is now in abox.c,
and converted to new dialog style.

13-Mar-2002
~~~~~~~~~~~
Removed remaining support for the old libvfs.
Updated lots of code to new Gtk+-2.0 style.

12-Mar-2002
~~~~~~~~~~~
Panel icons highlight when the pointer is over them.
Fixed some untranslatable strings (Andras Mohari).

11-Mar-2002
~~~~~~~~~~~
Converted Set Run Action box to new style.

10-Mar-2002
~~~~~~~~~~~
New panel style; better looking, and sensitive right up to the edge of the
screen.
Converted action window results list to use the new GtkTreeView widget.

09-Mar-2002
~~~~~~~~~~~
Converted Savebox widget to new Gtk style.

07-Mar-2002
~~~~~~~~~~~
Fix compile problems with Gtk+-2.0-rc1 (missing X libs and cflags).