@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+22-Mar-2002
+~~~~~~~~~~~
+Large (over 50K) image files are now loaded in a subprocess. Faster, less
+likely to crash due to bad images, and more responsive.
+
 21-Mar-2002
 ~~~~~~~~~~~
 Filenames which are not valid UTF-8 are shown in red. A tooltip explains the
